# rapid_timeseries_datasets_library

./: .gitignore  external_links.txt  run_tests_mac.txt
benchmark/: testing.ipynb
presentation/: final_presentation.tex  intermediate_presentation.tex  tasks.txt
presentation/includes/: preamble.tex
report/: bib.bib  main.tex  report_assignments.txt  report_group_1.tex
report/includes/: preamble.tex
report/includes/macros/: commands.tex
source_code/: Cargo.toml  usage.ipynb  wrapper.py
source_code/python/: benchmarking.py  benchmarking_results.json  dataset_loaders.py  memory_monitor.py  numpy_methods.py  parameter_iterators.py  python_methods.py  requirements.txt  rust_methods.py  torch_methods.py  usage.ipynb  validate.py  validation_suite.py  wrapper.py
source_code/src/: abrev_types.rs  classification_data_set.rs  classification_dataset.rs  collecting.rs  data_abstract.rs  forecasting_data_set.rs  forecasting_dataset.rs  functionalities.rs  lib.rs  preprocessing.rs  py_definitions.rs  splitting.rs  utils.rs
source_code/tests/: test_1.rs  test_classification_data_set.rs  test_collecting.rs  test_forecasting_data_set.rs  test_imputing.rs  test_preprocessing.rs  test_splitting.rs  test_utils.rs  tests.rs
source_code/tests/common/: mod.rs
